Fix form adaptation bugs caused by animation on mobile and fix header on mobile

--- a/src/sass/components/_base.scss
+++ b/src/sass/components/_base.scss
@@ -7,6 +7,11 @@ body {
     padding: 0 20px;
     margin: 0 auto;
     max-width: 1440px;
+
+	@media (max-width: 425px) {
+		max-width: 100%;
+		padding: 0 16px;
+	}
 }
 
 .title {
